--- a/SuperMonContext/pom.xml
+++ b/SuperMonContext/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>com.neotys.actions</groupId>
             <artifactId>neotys-custom-action-api</artifactId>
-            <version>2.9.1</version>
+            <version>2.10.0</version>
         </dependency>
         <dependency>
             <groupId>com.neotys.actions</groupId>
@@ -23,7 +23,9 @@
         </dependency>
         <dependency>
             <groupId>com.neotys.ascode</groupId>
-            <artifactId>swagger-java-client</artifactId>
+            <artifactId>api-client-v3</artifactId>
+
+
         </dependency>
     </dependencies>
     <build>
