--- a/Webhookhandler/pom.xml
+++ b/Webhookhandler/pom.xml
@@ -65,7 +65,8 @@
 
         <dependency>
             <groupId>com.neotys.ascode</groupId>
-            <artifactId>swagger-java-client</artifactId>
+            <artifactId>api-client-v3</artifactId>
+
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
