--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
             </dependency>
             <dependency>
                 <groupId>com.neotys.ascode</groupId>
-                <artifactId>swagger-java-client</artifactId>
-                <version>1.0.17</version>
+                <artifactId>api-client-v3</artifactId>
+                <version>1.0.18</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
