--- a/Webhookhandler/pom.xml
+++ b/Webhookhandler/pom.xml
@@ -12,9 +12,8 @@
     <artifactId>Webhookhandler</artifactId>
     <properties>
         <java.version>1.8</java.version>
-        <tag>0.1</tag>
-        <dockerimage>docker.io/mysupermonneoload
-            /neoload_supermon</dockerimage>
+        <tag>0.2</tag>
+        <dockerimage>docker.io/mysupermonneoload/neoload_supermon</dockerimage>
         <NL_WEB_HOST>neoload.saas.com</NL_WEB_HOST>
         <NL_API_HOST>neoload-api.saas.com</NL_API_HOST>
         <NL_API_TOKEN>YOUNLAPITOKEN</NL_API_TOKEN>
